<resources>
    <string name="app_name">Posh Wash</string>
    <string name="facebook_app_id">383038732254571</string>
    <string name="google_maps_key">AIzaSyBOvoTl4J5qJuRLNneFb-fP6Epz_JJp3ss</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="home">Home</string>
    <string name="manage_vehicle">Manage Vehicle</string>
    <string name="booking_vehicle">Booking Vehicle</string>
    <string name="transaction_history">My Wallet</string>
    <string name="packages">Packages</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up!</string>
    <string name="sign_up_btn">Sign up </string>
    <string name="sign_in_btn">Sign In </string>
    <string name="sign_up_text">Sign up</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="name">First Name</string>
    <string name="fname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="emailprofile">Email Address -</string>
    <string name="phoneprofile">Phone Number -</string>
    <string name="phone_number">Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="addressprofile">Address -</string>
    <string name="address2profile">Address 2 -</string>
    <string name="address_new">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have an account? <b> Login here</b></string>
    <string name="already_have_account_serive">Already have an account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="user_name"><font size="12">Username</font></string>
    <string name="donot_account">Don\'t have an account? <b> Sign Up</b></string>
    <string name="choose_vehicle_type">Choose vehicle type</string>
    <string name="model">Model</string>
    <string name="plate_number">Plate number: </string>
    <string name="color">Color: </string>
    <string name="vehicle_location">Vehicle location</string>
    <string name="please_select">Please Select</string>
    <string name="upload_vehicle_picture">Upload vehicle picture</string>
    <string name="upload_vehicle_picture_optional">Upload vehicle picture (optional)</string>
    <string name="browse">Browse</string>
    <string name="submit">Submit</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="my_booking">My Bookings</string>
    <string name="ondemanbooking">On Demand Bookings</string>
    <string name="vehiclelist">Vehicle list</string>
    <string name="my_profile">My Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="aboutus">About us</string>
    <string name="aboutustext">Lorem Ipsum is simply dummy text of the printing and typesetting industry.product_imgs, product_imgnter took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng software like Aldus PageMaker including versions of Lorem Ipsumng </string>
    <string name="enter_your_name">Enter your name</string>
    <string name="yourname">Your Name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_phone_number">Enter phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="save">Save</string>
    <string name="cannotleftblank">Required</string>
    <string name="validation_error">Please enter valid email address</string>
    <string name="validation_error_new">Please enter valid email address</string>
    <string name="validation_error_password"> Password should be minimum 6 Character with mix of characters + numerical</string>
    <string name="changepassword">Change Password</string>
    <string name="privacyplicies">Privacy policy</string>
    <string name="termscondition">Terms and conditions</string>
    <string name="agreetermscondition"><u>I agree terms and conditions</u></string>
    <string name="faq">FAQs</string>
    <string name="help">Help</string>
    <string name="contactus">Contact us</string>
    <string name="enteroldpassword">Please enter old password</string>
    <string name="newpassword">New password</string>
    <string name="enternewpassword">Please enter new password</string>
    <string name="enterconfirmpassword">Please enter confirm password</string>
    <string name="confirmpassworddoesnotmatch">New and confirm password do not match.</string>
    <string name="vehicleadd">Vehicles details added successfully</string>
    <string name="my_transaction_history">My Transaction History</string>
    <string name="edit">Edit</string>
    <string name="android">android</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="remove">REMOVE</string>
    <string name="pending">Pending</string>
    <string name="delivered">Delivered</string>
    <string name="returned">Returned</string>
    <string name="cancelled">Cancelled</string>
    <string name="about">about-us</string>
    <string name="contact">contact-us</string>
    <string name="privacy">privacy-policy</string>
    <string name="terms">terms</string>
    <string name="get_fare">Get Fare</string>
    <string name="car_error">Please select single or max 3 cars.</string>
    <string name="select_date_error">Please select wash date</string>
    <string name="request_time_error">Please select wash time.</string>
    <string name="no_vehicle_error">Sorry! You have no vehicle for wash.</string>
    <string name="type_text_here">Type text here</string>
    <string name="choose_booking">Choose Booking</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="why_you_want_cancel_booking">Why you want to cancel booking?</string>
    <string name="need_help">NEED HELP?</string>
    <string name="cancel_booking_history">Cancel Booking History</string>
    <string name="take_a_photo">Take a photo of Item</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_top_text">You will receive one time password (OTP) on your mobile number</string>
    <string name="otp_text">OTP has been sent to on your Mobile Number</string>
    <string name="no_booking_found">No booking made yet</string>
    <string name="no_cancel_booking_found">No cancel booking yet</string>
    <string name="no_booking_complete">No booking complete yet</string>
    <string name="no_notification_found">No Notification found</string>
    <string name="no_data_found">No Data found</string>
    <string name="no_pending_request">No Pending Request</string>
    <string name="no_transaction_found">No Transaction found</string>
    <string name="no_package_found">No Package found</string>
    <string name="no_order_found">No Order found</string>
    <string name="no_vehicle_found">No Vehicle found</string>
    <string name="walk_text1">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua first.</string>
    <string name="walk_text2">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua second.</string>
    <string name="walk_text3">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua third.</string>
    <string name="require_field">* Required Field</string>
    <string name="select_vehicle_type">Select vehicle type</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="select_cars">Select Vehicle</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="editpreferred_language">Preferred Language -</string>
    <string name="location">Location</string>
    <string name="otp_verification">OTP Verification !</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="valid_otp">Please enter valid OTP</string>
    <string name="valid_first_name">Enter valid first name</string>
    <string name="valid_last_name">Enter valid last name</string>
    <string name="valid_phone_number">Enter valid phone number</string>
    <string name="valid_address">Please enter your location</string>
    <string name="book_your_car_wash">Book Your Car wash</string>
    <string name="order_later">Order Later</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time </string>
    <string name="remember_me">Reminder me</string>
    <string name="cash">Cash</string>
    <string name="nameText">Name</string>
    <string name="choose_location">Choose Location</string>
    <string name="preview_details">Preview Details</string>
    <string name="change_driver">Change Driver</string>
    <string name="enter_promo_code">Enter Refer Code</string>
    <string name="promoCode">Refer Code</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="job_detail">Job Detail</string>
    <string name="minute">Minutes</string>
    <string name="past_booking">Past Bookings</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="tickets">Tickets</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="done">DONE</string>
    <string name="select_reason">Select Reason</string>
    <string name="cancel_now">Cancel Now</string>
    <string name="code">Code</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="choose_language">Choose Langauge</string>
    <string name="amount">Amount</string>
    <string name="processed_to_add_money">Proceed to Add Money</string>
    <string name="card">Card</string>
    <string name="wallet">Wallet</string>
    <string name="select_payment">Select payment type</string>
    <string name="my_wallet">My wallet</string>
    <string name="add_money_to">Add money to</string>
    <string name="autospa_wallet">Auto Spa Wallet</string>
    <string name="card_info">Card Info</string>
    <string name="add_card">Add Card</string>
</resources>