<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:background="@color/white"
    android:orientation="vertical">

    <com.poshwash.android.customViews.CustomTexViewBold
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/choose_language"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp" />

    <RadioGroup
        android:id="@+id/rbgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/jf_flat_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/english"
            android:textColor="@color/greencolor"
            android:textSize="@dimen/_15sdp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:fontFamily="@font/jf_flat_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/arabic"
            android:textColor="@color/greencolor"
            android:textSize="@dimen/_15sdp" />
    </RadioGroup>

    <com.poshwash.android.customViews.CustomTexViewBold
        android:id="@+id/doneTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp" />

</LinearLayout>