<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_border_logout"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <com.poshwash.android.customViews.CustomTexViewBold
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/select_payment"
            android:textColor="@color/skybluecolor"
            android:textSize="16dp"
            android:textStyle="bold"
            android:typeface="sans" />

        <com.poshwash.android.customViews.CustomTexViewRegular
            android:id="@+id/dialog_card"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/card"
            android:textColor="@color/graycolor"
            android:textSize="16dp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#11333333" />

        <com.poshwash.android.customViews.CustomTexViewRegular
            android:id="@+id/dialog_wallet"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wallet"
            android:textColor="@color/graycolor"
            android:textSize="16dp"
            android:typeface="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="#11333333" />

        <com.poshwash.android.customViews.CustomTexViewRegular
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/graycolor"
            android:textSize="16dp"
            android:typeface="normal" />

    </LinearLayout>
</LinearLayout>