<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <ImageView
                android:id="@+id/toggle_icon"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="20dp"
                android:src="@drawable/menu" />

            <com.poshwash.android.customViews.CustomTexViewBold
                android:id="@+id/action_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:text="@string/my_wallet"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp" />

    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:orientation="vertical">

            <com.poshwash.android.customViews.CustomTexViewRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_money_to"
                android:textColor="@color/blackcolor" />

            <com.poshwash.android.customViews.CustomTexViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/autospa_wallet"
                android:textColor="@color/blackcolor"
                android:textSize="@dimen/_15sdp" />

            <com.poshwash.android.customViews.CustomTexViewRegular
                android:id="@+id/tv_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/blackcolor" />

            <com.poshwash.android.customViews.CustomEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number"
                android:maxLength="3" />

            <com.poshwash.android.customViews.CustomButtonBold
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/mybuttonsubmit"
                android:text="@string/processed_to_add_money"
                android:textAllCaps="false"
                android:textColor="@color/white"

                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/cardview_shadow_start_color"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" />

            <com.poshwash.android.customViews.CustomTexViewRegular
                android:id="@+id/no_data_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_transaction_found"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>