<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <ImageView
                android:id="@+id/toggle_icon"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_marginStart="20dp"
                android:src="@drawable/menu" />

            <com.poshwash.android.customViews.CustomTexViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:text="@string/card_info"
                android:textColor="@color/graycolor"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_10sdp">

        <com.poshwash.android.customViews.CustomButtonBold
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/mybuttonsubmit"
            android:text="@string/add_card"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />


    </RelativeLayout>

    <com.poshwash.android.customViews.CustomTexViewRegular
        android:id="@+id/no_data_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_notification_found"
        android:textColor="@color/graycolor"
        android:textSize="@dimen/_15sdp"
        android:visibility="gone" />


</RelativeLayout>